# emergency_admission_surveillence

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: ingest_data.py
dbt/: .user.yml  profiles.yml
dbt/emergency_dbt/: dbt_project.yml
dbt/emergency_dbt/models/: regional_stats.sql  sources.yml
scripts/: transform.py
terraform/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup
