[project]
name = "emergency-admission-surveillence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.8",
    "dbt-bigquery>=1.11.1",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.1.1",
    "pyspark>=4.1.1",
]
